<resources>
    <string name="app_name">PopularMovies</string>
    <string name="movie_title">Movie Title</string>
    <string name="most_popular">Most Popular</string>
    <string name="most_recent">Most Recent</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="movie_detail">MovieDetail</string>
    <string name="duration">120min</string>
    <string name="year">2015</string>
    <string name="movie_rating">8.1/10</string>
    <string name="button_favorite">Mark as favorite</string>
    <string name="button_unfavorite">Delete as favorite</string>
    <string name="menu_toast">List already processed</string>
    <string name="movie_description">Lorem ipsum dolor sit amet, mea everti suscipiantur ex, similique assueverit in ius, vix te libris imperdiet definitionem. An vix mundi tritani scripserit. In tractatos sapientem definitiones est, dicam tacimates nam ut, in nec scripta oporteat disputationi. Eam in atomorum concludaturque, harum impedit pertinax has eu. Te denique scribentur mei, te tempor graecis nam. Nec te quod wisi senserit, ut mea clita eirmod tibique.</string>
    <string name="trailers_title">Movie Clips:</string>
    <string name="reviews_title">Reviews:</string>
    <string name="network_error">No Network Connection</string>
    <string name="favorites">favorites</string>
    <item name="movie_clips_recyclerview" type="id"/>
    <item name="review_title" type="id"/>
    <item name="masked" type="id"/>
</resources>


