<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ae.andriod.popularmovies.ViewModel.MovieViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/teal400"
                android:paddingBottom="16dp"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/movie_title" />

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.imageUrl}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view"
                tools:src="@drawable/ic_udacity" />

            <TextView
                android:id="@+id/movie_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_image"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view"
                tools:text="@string/year" />

            <TextView
                android:id="@+id/movie_duration_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/movie_year_text_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_year_text_view"
                tools:text="@string/duration" />

            <TextView
                android:id="@+id/movie_rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@+id/movie_duration_text_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_duration_text_view"
                tools:text="@string/movie_rating" />

            <Button
                android:id="@+id/movie_mark_favorite_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/teal400"
                android:text="@string/button_favorite"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/movie_rating_text_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_rating_text_view" />

            <TextView
                android:id="@+id/movie_description_text_view"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:gravity="start"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image"
                tools:text="@string/movie_description" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
